    level items.
12. When adding files to playqueue, only add in batches of up to 2000 songs.
    This 'chunk size' may be altered by setting mpdListSize in Cantata's config
    file - see README for details.
13. Add 'Remove duplicates' functionality to play queue and play lists.
14. Only start internal HTTP server when required, and stop 1 second after
    last Cantata stream is removed.

1.2.2
-----
1. Fix British English translation.
2. Improve internal HTTP security - only server files to MPD host, and only
   serve files in playqueue.
3. Also remove CDDA files when Cantata exits.
4. Improve error message if 'playlist_directory' does not exist.
5. If icon theme does not have network-server, then use audio file icon for
   HTTP server settings page.
6. Fix truncated files served from internal HTTP server.
7. When adding songs to an existing play lists, dont allow play list files to
   be added.
8. If Ctrl-F is activated again whilst search widget is visible, then select
   all current text.
9. When MPD seeks a Cantata HTTP stream, set the Content-Range header field.

1.2.1
-----
1. Only use old Qt DBUS type annotations for Qt less than 4.8.2
2. Use "(c)" instead of "©", as "©" seems to mess up Qt translations.
3. Fix tagtype and URL handler detection. Fixes Composer support, and streams.
4. Use 32x32 for drag'n'drop icon, 64x64 for highdpi.
5. Use audio-x-generic icon for drag'n'drop if no cover found.
6. Fix potential memory leak with cover images.
7. Fix crash when changing online view from list to tree, after a soundcloud
   search.
8. Use MPD status.playlistLength to determine number of playqueue items when
   controlling state of prev, next, and stop buttons.

1.2.0
-----
 1. Add support for opus audio format - AudioCD encoding, transcoding, HTTP
    server, etc.
 2. Add support for user-installable stream providers. See README for file
    format.
 3. Add config page to control which stream categories are enabled, to import