@@ -24,6 +24,10 @@
 13. Add 'Remove duplicates' functionality to play queue and play lists.
 14. Only start internal HTTP server when required, and stop 1 second after
     last Cantata stream is removed.
+15. If connected to MPD via a UNIX-domain socket, then send non-MPD files as
+    file:/// URLs to MPD - i.e. dont use internal HTTP server. To foce usage of
+    HTTP server - set alwaysUseHttp to true in Cantata's config file. Refer to
+    README for more details.
 
 1.2.2
 -----
